--- a/My Veb.html
+++ b/My Veb.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!index.html>
 <!-- Устанавливаем язык по умолчанию, JS его изменит при необходимости -->
 <html lang="en" class="scroll-smooth">
 <head>
@@ -770,4 +770,5 @@ document.addEventListener('DOMContentLoaded', () => {
 </script>
 </body>
 </html>
+
 
