Update and rename My Veb.html to index.html

--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!index.html>
+<!index html>
 <!-- Устанавливаем язык по умолчанию, JS его изменит при необходимости -->
 <html lang="en" class="scroll-smooth">
 <head>
@@ -770,5 +770,6 @@ document.addEventListener('DOMContentLoaded', () => {
 </script>
 </body>
 </html>
+
 
 
